--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,7 @@ jobs:
           node-version: 16
       - name: Install packages
         run: npm ci
+      - name: Build package
+        run: npm run build
       - name: Run lint
         run: npm run lint
